# nfa-checker

./: .gitignore  CMakeLists.txt  README.md
data/: example_nfa.json
include/: nfa_loader.h  nfa_sim.h
src/: main.cpp  nfa_loader.cpp  nfa_sim.cpp
